# esl_proxy

./: .gitignore  Makefile_scheduler  README.md  Todo.md
cmake/: sources.cmake
cmake/aicore/: CMakeLists.txt
cmake/aicpu/: CMakeLists.txt
cmake/host/: CMakeLists.txt
doc/: overview.md  tensormap_analysis_report.html
doc/pr/: 00_layout.md  01_board_bringup.md
esl_proxy/: .gitignore  CLAUDE.md  Makefile
esl_proxy/.specify/: feature.json
esl_proxy/.specify/extensions/: .registry
esl_proxy/.specify/extensions/git/: git-config.yml
esl_proxy/.specify/integrations/: claude.manifest.json  speckit.manifest.json
esl_proxy/.specify/memory/: constitution.md
esl_proxy/.specify/templates/: plan-template.md
esl_proxy/.specify/workflows/: workflow-registry.json
esl_proxy/cases/: org.h  paged_attention_subgraph.h  paged_attention_total_graph.h  paged_attention_unroll.h  paged_attention_unroll_manual_scope.h  qwen3_decode.h  qwen3_decode_data.h  qwen3_decode_dep.h  qwen3_decode_tensormap.h  qwen3_dynamic_manual_scope.h  qwen3_dynamic_manual_scope_副本.h  qwen3_dynamic_tensormap.h  qwen3_dynamic_tensormap_ot0.h  qwen3_dynamic_tensormap_ot1.h  qwen3_dynamic_tensormap_ot2.h
esl_proxy/include/: conf.h  cutter.h  cutter_impl.h  dep_dump.h  dispatch.h  executor.h  log.h  mem_pool.h  queue.h  ring_buf.h  task.h  tensormap.h
esl_proxy/include/algorithm/: aicore_executor.h  conf.h  dispatch.h  executor.h  fake_kernel.h  handshake.h  mpmc_queue.h  queue.h  ring_buf.h  runtime.h  spin.h  task.h  tensormap.h  tensormap_core.h
esl_proxy/include/cases/: paged_attention_subgraph.h  qwen3_14b_decode_subgraph.h  qwen3_14b_decode_total_graph.h  template_graph.h
esl_proxy/include/common/: log.h  queue.h  task.h
esl_proxy/include/dag/: mpmc_queue.c  mpmc_queue.h  ring_buf.h  task.h
esl_proxy/include/platform/: a6.h  handshake.h  platform.h  platform_config.h  platform_regs.h  runtime.h
esl_proxy/include/platform/a2a3/: aicore.h  kernel_args.h
esl_proxy/include/platform/sim/: aicore.h  sim_core_regs.h
esl_proxy/include/platform/tools/: log.h  memory_barrier.h  platform.h  platform_config.h  platform_regs.h  worker_map.h
esl_proxy/include/scheduler/: conf.h  dispatch.h  painter.h  template_graph.h
esl_proxy/include/swimlane/: swimlane_aicpu.h
esl_proxy/log/: pto._thread_0.csv  pto._thread_0.dot  pto._thread_1.csv  pto._thread_1.dot  pto._thread_2.csv
esl_proxy/specs/001-orchestrator/: spec.md
esl_proxy/specs/001-orchestrator/checklists/: requirements.md
esl_proxy/specs/003-executor/: spec.md
esl_proxy/specs/003-executor/checklists/: requirements.md
esl_proxy/specs/004-dispatch/: plan.md  spec.md
esl_proxy/specs/004-dispatch/checklists/: requirements.md
esl_proxy/specs/006-cutter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
esl_proxy/specs/006-cutter/checklists/: requirements.md
esl_proxy/specs/006-cutter/contracts/: shmem-completed.md  shmem-dag.md  shmem-ready.md
esl_proxy/specs/007-memory-pool/: data-model.md  plan.md  quickstart.md  spec.md
esl_proxy/specs/007-memory-pool/checklists/: requirements.md
esl_proxy/specs/007-memory-pool/contracts/: api.md
esl_proxy/specs/008-task/: plan.md  spec.md  tasks.md
esl_proxy/specs/008-task/checklists/: requirements.md
esl_proxy/specs/009-ring-buffer/: plan.md  spec.md
esl_proxy/specs/009-ring-buffer/checklists/: requirements.md
esl_proxy/specs/010-mpmc-queue/: plan.md  spec.md  tasks.md
esl_proxy/specs/010-mpmc-queue/checklists/: requirements.md
esl_proxy/src/: cutter.c  dispatch.c  executor.c  log.c  main.c  manager.c  shm.c
esl_proxy/src/algorithm/: aicore_executor.c  cutter.c  dispatch.c  dispatch_a3.c  dispatch_double_buffer.c  dispatch_expand.c  dispatch_payload.c  executor.c  handshake.c  log.c  manager.c  shm.c
esl_proxy/src/platform/: handshake.c
esl_proxy/src/platform/a2a3/: aicore_entry.cpp  aicpu_runtime.c  host_onboard.c  npu_hal.c  platform_init.c
esl_proxy/src/platform/onboard/: aicore_entry.cpp  aicpu_dispatcher.c  aicpu_runtime.c  cache_ops.c  host_onboard.c  platform_init.c  tools.c
esl_proxy/src/platform/sim/: aicore_wrapper.cpp  cache_ops.c  platform_init.c  platform_regs.c  platform_sim.c
esl_proxy/src/scheduler/: dispatch.c  log.c  painter.c  scheduler.c
esl_proxy/src/swimlane/: host_swimlane.c  swimlane_aicpu.c
esl_proxy/tests/: test_dep_dump_qwen3_edges.c  test_mem_pool.c  test_qwen3_decode_tensormap.c  test_tensormap.c
esl_proxy/tmp/: parallel_tensor_map.cpp
log/: pto._thread_0.csv
report/: dag.dot  esl_proxy_实现文档.md  m5.md  swimlane_scheduler_thread_3.csv  zero_gap_baseline_method.md
report/basic/: pto._thread_0.dot  pto._thread_1.dot
report/double_buffer/: pto._thread_0.dot  pto._thread_1.dot
report/proxy/: qwen3_14b.md  qwen3_14b_tensormap.md  tensormap_alignment_benchmark.md
report/spmd_tier4/: pto._thread_0.dot  pto._thread_1.dot
report/swimlane/basic/paged_attention_unroll/: l2_swimlane_trace.json
report/swimlane/basic/paged_attention_unroll_manual_scope/: l2_swimlane_trace.json
report/swimlane/basic/qwen3_dynamic_manual_scope/: l2_swimlane_trace.json
report/swimlane/basic/qwen3_dynamic_tensormap/: l2_swimlane_trace.json
report/swimlane/double_buffer/paged_attention_unroll/: l2_swimlane_trace.json
report/swimlane/double_buffer/paged_attention_unroll_manual_scope/: l2_swimlane_trace.json
report/swimlane/double_buffer/qwen3_dynamic_manual_scope/: l2_swimlane_trace.json
report/swimlane/double_buffer/qwen3_dynamic_tensormap/: l2_swimlane_trace.json
scripts/: bench_tensormap_cases.sh
tools/: _run_all_onboard_cases.sh  _run_qwen3_onboard.sh  analyze_scheduler_logs.py  case_task_func_maps.json  gen_case_task_func_maps.py  gen_dag.py  qwen3_func_names.json  run_onboard.sh  swimlane_trace.py
tools/dep_dump/tests/: test_dep_dump_paged_attention_edges.c
